# kbeta-pinn3d

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pinn3d.py  pyproject.toml
.github/workflows/: ci.yml
src/kbeta-pinn3d/: __init__.py  pinn3d.py
src/kbeta-pinn3d/utils/: plotting.py  visualization.py
src/kbeta_pinn3d/: __init__.py  _shim.py  pinn3d.py
src/kbeta_pinn3d/utils/: plotting.py  visualization.py
tests/: test_forward.py  test_smoke.py
