[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kbeta_pinn3d"
version = "0.0.0a1"
description = "3‑D cylindrical PINN demo for the Kourkoutas‑β optimizer paper"
authors = [{name = "Stavros Kassinos", email = "kassinos.stavros@ucy.ac.cy"}]
requires-python = ">=3.11"
dependencies = [
  "mlx>=0.27",            # Apple‑MLX
  "numpy>=2.3",
  "matplotlib>=3.9",    
  "kbeta >=1.0.1a0,<2"]
  #"seaborn>=0.13",    
  #"pandas>=2.2",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pre-commit", "build", "twine"]
viz = [
    "matplotlib>=3.8",   # core plotting
    "seaborn>=0.13",     # nicer styles / violin plots
    "pandas>=2.2"        # DataFrame helpers
]

[tool.setuptools.packages.find]
where = ["src"]
#include = ["kbeta_pinn3d*"]

[project.scripts]
kbeta-pinn3d = "kbeta_pinn3d._shim:entry"

[tool.ruff]
line-length = 99
lint.select = ["E", "F", "I", "UP"]
lint.ignore = ["E402"]      # allow imports after docstring in single‑file scripts
extend-ignore = ["E501","E702","F841","E731","F401"]
