[build-system]
requires      = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "kbeta_pinn3d"
version         = "1.0.1"
description     = "3-D cylindrical PINN benchmark for the Kourkoutas-β optimizer paper"
authors         = [{name = "Stavros Kassinos"}]
readme          = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }

# --- runtime deps (imported at run-time) ----------
dependencies = [
    "mlx>=0.27.1",          # Apple-MLX
    "numpy>=2.3",
    "matplotlib>=3.9",
    "kbeta>=1.0.0,<2",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: MacOS :: MacOS X",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage      = "https://github.com/sck-at-ucy/kbeta-pinn3d"
Documentation = "https://github.com/sck-at-ucy/kbeta-pinn3d"
Repository    = "https://github.com/sck-at-ucy/kbeta-pinn3d"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
    "build",
    "twine",
]
viz = [
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "pandas>=2.2",
]
repro = [
    "mlx==0.26.3",
    "kbeta==1.0.0",
    "numpy==2.3.0",
    "pyyaml",                 # often needed for configs
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "pandas>=2.2",
    "pytest",
    "ruff",
    "mypy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where   = ["src"]
include = ["kbeta_pinn3d*"]

[tool.setuptools.package-data]
"kbeta_pinn3d" = ["py.typed"]

[project.scripts]
kbeta-pinn3d = "kbeta_pinn3d._shim:entry"

[tool.pytest.ini_options]
pythonpath = ["src"]

# -------------------------------------------
# Ruff configuration
# -------------------------------------------
[tool.ruff]
target-version = "py311"
line-length    = 88
src            = ["src", "tests"]
exclude        = [".venv*", "tests/.venv*"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
